compiler/tests/fixtures/compile_errors/aug_assign_non_numeric.fe
contract Foo:
    pub def bar(a: u256, b: bool):
        a += b